# Insula

./: .gitignore  CMakeLists.txt  README.md
doc/examples/: julia.json  mandelbrot.json  mandelbrot.xml  mandelbrot_zoomed.json  scenetest.json
src/: fractals.cpp  fractals.hpp  integration.cpp  integration.hpp  main.cpp  sampling.cpp  sampling.hpp
src/core/: Gradient.cpp  Gradient.hpp  Image.hpp  TaskParameters.hpp  insula.hpp  io.hpp
src/scene/: Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Scene.hpp  SceneTest.cpp  SceneTest.hpp
src/util/: parallel.hpp  vector.hpp
